tests/expr/right_shift_right_operand_time/stderr.golden
error: right operand of right shift must be of type integer, current type time
bus.fbd +2:26
   |
 2 |   c config; width = 1 >> 10 ns
   |                          ^^^^^
